# lab

./: .gitignore  index.txt
coding/: concept.algo  tracking.txt
concepts/: concepts_cse.txt  cse.txt  discussions.txt  discussions.yml
concepts/design/: design_patterns_lld.txt  programming.txt  system_design_hld.txt  tools.txt
concepts/design/snippets/: abstract_factory.h  builder.h  iterator.h  mediator.h  memento.h  policy_based_design.cc  singleton.h  state.h  template.h  visitor.h
cpp/: CMakeLists.txt  README  any.cc  any.ext  best_practices.txt  build.sh  classDifferentiator.cc  crtp.cc  detail.h  detailTest.cc  fileSystem.cc  graphics.cc  invoke.cc  iterator.cc  json.cpp  json.h  jsonTest.cc  logger.h  loggerTest.cc  observer.h  observerTest.cc  sfinae.cpp  sfinae2.cpp  subproces.c  terminal.cc  tostring.h  tostringTest.cc  typetrait.h  typetraitTest.cc  util.h  utilTest.cc
cpp/argparser/: argParser.cc
cpp/json/: CMakeLists.txt  cmake_install.cmake  json.cc  json.h  jsonEncoder.h  jsonEncoderImp.cc  jsonEncoderImp.h  jsonTypeTraits.h  jsonTypes.h  jsonValue.cc  jsonValue.h  jsonVisitor.h  json_dd.yml
cpp/serialize/: internal.h  reader.h  readerWriter.h  test.cc  writer.h
cpp/snippets/: atomic.cc  channel.cc  concepts.cc  contextWithTimeout.cc  curry.cc  for_each.cc  invoke.cc  messageQueue.h  producerConsumer.cc  ring.cc  singleton.cc  strongType.cc  template.cc  test
cpp/test/: CMakeLists.txt  detailTest.cc  jsonTest.cc  loggerTest.cc  observerTest.cc  tostringTest.cc  typetraitTest.cc  utilTest.cc
cpp/util/: observer.h  typetrait.h
cpp/vcs/: fileOps.h  fileOpsTest.cc  versionControl.cc
design/: architecture.yaml  best_practices.txt  chat_service_dd.txt  concepts.sd  concepts_cse.txt  concepts_ood.txt  concepts_sd.txt  cpp_bp.txt  distributed_system.yml  ood_problems.txt  projects_dd.txt  sd_problems.txt  system_design_dd.txt  system_design_hld.yml  video_streaming_service_dd.txt
design/snippets/: chain_of_responsibility.h  command.h  factorymethod.h  observer.h
experiment/: exampe.cxx  example.h  main.cc  person.cc
go/: best_practices.txt  build.sh  goroutine.go  linkExtracter.go  networkClient.go  networkTimer.go  rbTree.go  start_node.sh
go/ms/: go.mod
go/src/: go.mod
go/src/dcache/: application.go  go.mod  go.sum  grpc_client.go  grpc_server.go  hashring.go  hashring.pb.go  hashring.proto  hashring_grpc.pb.go  kvstore.go  logger.go  router.go  server.go
go/src/experiments/: channel.go
go/src/main/: dcacheTest.go  go.mod  main.go  tcpClient.go
go/src/mgopro/: consistent_hashing.go  goroutine.go  http.go  networkClient2.go  server.go
go/src/mutility/: cli.go  go.mod  (+8 more)
misc/: .slice.go.un~  build_tools.txt  slice.go  ttb.txt  version_control.txt
problem_solving/: problems.txt  range_query.cc  union_find.cc  union_find.go
projects/: distributed_cache_dd.yml  github.txt  json.yml  projects_dd.txt  redis.txt
ps/: concepts_ps.txt  dsa.txt  problems.txt  problems.yml  range_query.cc  union_find.cc
ps/snippets/: union_find.cc
python/: cpp_parser.py  decorator.py  dlf_tech_park.html  filePatch.py  file_ops.dd  file_ops.py  folium_map.py  geo_hash_example.py  google_map.py  graph_visualization.py  json_parser.py  map.html  noide_map.html  request.py  test.cc  test_parser.py  udp_client.py  udp_process.py
(+11 files in other folders)
