cmake_minimum_required(VERSION 3.10)

project(lab)
set(CMAKE_CXX_STANDARD 20)

add_executable(toStringTest    toStringTest.cc)
add_executable(observerTest    observerTest.cc)
add_executable(detailTest      detailTest.cc)
add_executable(typetraitTest   typetraitTest.cc)
add_executable(utilTest        utilTest.cc)
add_executable(loggerTest      loggerTest.cc)
add_executable(jsonTest        jsonTest.cc)

enable_testing()

add_test(NAME logger COMMAND loggerTest)
set_tests_properties(logger PROPERTIES PASS_REGULAR_EXPRESSION "info")
set_tests_properties(logger PROPERTIES PASS_REGULAR_EXPRESSION "warn")
set_tests_properties(logger PROPERTIES PASS_REGULAR_EXPRESSION "error")
add_test(NAME tostring COMMAND toStringTest)
add_test(NAME typetrait COMMAND typetraitTest)
add_test(NAME detail COMMAND detailTest)
add_test(NAME observer COMMAND observerTest)
add_test(NAME util COMMAND utilTest)
add_test(NAME json COMMAND jsonTest)
