list (APPEND INCLUDES "${PROJECT_SOURCE_DIR}")

add_executable(jsonTest        jsonTest.cc)
target_link_libraries(jsonTest PUBLIC json)

add_executable(toStringTest    toStringTest.cc)
add_executable(observerTest    observerTest.cc)
add_executable(detailTest      detailTest.cc)
add_executable(typetraitTest   typetraitTest.cc)
add_executable(utilTest        utilTest.cc)
add_executable(loggerTest      loggerTest.cc)

target_include_directories(jsonTest PUBLIC "${INCLUDES}")
target_include_directories(toStringTest PUBLIC "${INCLUDES}")
target_include_directories(observerTest PUBLIC "${INCLUDES}")
target_include_directories(detailTest PUBLIC "${INCLUDES}")
target_include_directories(typetraitTest PUBLIC "${INCLUDES}")
target_include_directories(utilTest PUBLIC "${INCLUDES}")
target_include_directories(loggerTest PUBLIC "${INCLUDES}")

add_test(NAME json COMMAND jsonTest)
add_test(NAME logger COMMAND loggerTest)
set_tests_properties(logger PROPERTIES PASS_REGULAR_EXPRESSION "info")
set_tests_properties(logger PROPERTIES PASS_REGULAR_EXPRESSION "warn")
set_tests_properties(logger PROPERTIES PASS_REGULAR_EXPRESSION "error")
add_test(NAME tostring COMMAND toStringTest)
add_test(NAME typetrait COMMAND typetraitTest)
add_test(NAME detail COMMAND detailTest)
add_test(NAME observer COMMAND observerTest)
add_test(NAME util COMMAND utilTest)
